--- a/RocketProject/Base.lproj/Main.storyboard
+++ b/RocketProject/Base.lproj/Main.storyboard
@@ -34,8 +34,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="cWl-6l-oea">
-                                        <rect key="frame" x="143" y="426" width="90" height="57"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="roket" translatesAutoresizingMaskIntoConstraints="NO" id="cWl-6l-oea" userLabel="Rocket">
+                                        <rect key="frame" x="0.0" y="453" width="375" height="583"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloudsAndOrangeOval" translatesAutoresizingMaskIntoConstraints="NO" id="zdX-C9-hK6">
@@ -81,6 +81,6 @@
         <image name="cloudsAndOrangeOval" width="414" height="477"/>
         <image name="darkBlueBG" width="414" height="736"/>
         <image name="powerButton" width="96" height="96"/>
-        <image name="rocket" width="275" height="500"/>
+        <image name="roket" width="621" height="1008"/>
     </resources>
 </document>
